# Toy-GPU-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
debug/: Diagnostics.cpp  GraphvizDumper.cpp  Logger.cpp
examples/: vector_add.ptx
exec-engine/: ALU.cpp  BranchUnit.cpp  WarpScheduler.cpp  WarpState.cpp
include/toygpu/: ALU.h  BranchUnit.h  Diagnostics.h  GraphvizDumper.h  IR.h  Lexer.h  Logger.h  Memory.h  Parser.h  Pass.h  SemanticValidator.h  TypeSystem.h  WarpScheduler.h  WarpState.h
memory/: AddressSpace.cpp  BankConflictDetector.cpp  CacheModel.cpp  CoalescingChecker.cpp
optimizer/: ConstantFolding.cpp  DeadCodeElimination.cpp  InstructionScheduler.cpp  Pass.cpp  RegisterAllocation.cpp
ptx-frontend/: IR.cpp  Lexer.cpp  Parser.cpp  SemanticValidator.cpp  TypeSystem.cpp
tests/: ExecutionTests.cpp  FrontendTests.cpp  MemoryTests.cpp  OptimizerTests.cpp  TestHarness.h  TestMain.cpp
